// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Em checkGrammar=false 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Em checkGrammar=true 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Em checkHighlight=false 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Em checkHighlight=true 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Em checkSpaces=false 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Em checkSpaces=true 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Em className="my-classname" 1`] = `
<em
  className="uu5-bricks-em my-classname"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Em content="This is Content from ContentMixin" 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
>
  This is Content from ContentMixin
</em>
`;

exports[`UU5.Bricks.Em content=12345 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
>
  12345
</em>
`;

exports[`UU5.Bricks.Em controlled=false 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Em controlled=true 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Em default props 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Em disabled=false 1`] = `
<em
  className="uu5-bricks-em"
  disabled={false}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Em disabled=true 1`] = `
<em
  className="uu5-bricks-em"
  disabled={true}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Em docKit examples UU5.Bricks.Em should render without crash 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
>
  emphasised
</em>
`;

exports[`UU5.Bricks.Em dynamic=false 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Em dynamic=true 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Em hidden=false 1`] = `
<em
  className="uu5-bricks-em"
  hidden={false}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Em hidden=true 1`] = `
<em
  className="uu5-bricks-em"
  hidden={true}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Em id="myId" 1`] = `
<em
  className="uu5-bricks-em"
  id="myId"
/>
`;

exports[`UU5.Bricks.Em ignoreHTML=false 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Em ignoreHTML=true 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Em mainAttrs=undefined 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Em name="myName" 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Em noIndex=false 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Em noIndex=true 1`] = `
<em
  className="uu5-bricks-em uu5-noindex"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Em selected=false 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Em selected=true 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Em style="padding:8px; borderRadius: 2px" 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
/>
`;

exports[`UU5.Bricks.Em style={"backgroundColor":"red","color":"blue"} 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
/>
`;

exports[`UU5.Bricks.Em textCorrector=false 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Em textCorrector=true 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Em tooltip="My Tooltip" 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
/>
`;
